# src/handlers/mission-upsert-message-handler.js
@@ -392,7 +392,7 @@ class MissionUpsertMessageHandler {
    * @returns {Promise<Object>}
    */
   async handle(socket, payload) {
-    this.context.logHandlerMessage('add-mission-request', payload);
+    this.context.logHandlerMessage('mission-upsert-request', payload);
     const correlationId = resolveCorrelationId(
       payload,
       this.context.toNonEmptyString.bind(this.context)
