# src/model/mission-upsert.js
@@ -1,9 +1,7 @@
 'use strict';
 
-const MISSION_UPSERT_REQUEST_EVENT = 'add-mission-request';
-const MISSION_UPSERT_RESPONSE_EVENT = 'add-mission-response';
-const MISSION_UPSERT_ALIAS_REQUEST_EVENT = 'mission-upsert-request';
-const MISSION_UPSERT_ALIAS_RESPONSE_EVENT = 'mission-upsert-response';
+const MISSION_UPSERT_REQUEST_EVENT = 'mission-upsert-request';
+const MISSION_UPSERT_RESPONSE_EVENT = 'mission-upsert-response';
 
 /**
  * @typedef {Object} MissionUpsertRequestIdentity
@@ -40,6 +38,4 @@ const MISSION_UPSERT_ALIAS_RESPONSE_EVENT = 'mission-upsert-response';
 module.exports = {
   MISSION_UPSERT_REQUEST_EVENT,
   MISSION_UPSERT_RESPONSE_EVENT,
-  MISSION_UPSERT_ALIAS_REQUEST_EVENT,
-  MISSION_UPSERT_ALIAS_RESPONSE_EVENT,
 };
